--- a/src/features/swipers/categorySwiper/categorySwiper.scss
+++ b/src/features/swipers/categorySwiper/categorySwiper.scss
@@ -41,16 +41,35 @@
       padding: 5px;
       gap: 10px;
 
-      p {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 30px;
-        text-align: right;
-        color: themed("textColor");
+      .category-name {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        min-width: fit-content;
+        // width: auto;
+        p {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 30px;
+          text-align: right;
+          color: themed("textColor");
+        }
+      }
+
+      .icon-category {
+        color: themed("mainIconColor");
+      }
+      .active-category {
+        color: themed("orangeBlueIcons");
+        p {
+          color: themed("orangeBlueIcons");
+        }
       }
     }
+
     .mySwiper {
       width: 95% !important;
     }
@@ -60,7 +79,7 @@
       height: 100%;
     }
     .swiper-slide {
-      width: 109px !important;
+      width: auto !important;
       height: 35px;
       font-size: 18px;
       background: #fff;
@@ -78,16 +97,6 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-
-    .icon-category {
-      color: themed("mainIconColor");
-    }
-    .active-category {
-      color: themed("orangeBlueIcons");
-      p {
-        color: themed("orangeBlueIcons");
-      }
     }
   }
 }
