Updated loginPage placeholder

--- a/src/pages/auth/loginPage/loginPage.scss
+++ b/src/pages/auth/loginPage/loginPage.scss
@@ -33,20 +33,26 @@
     .input-container {
       display: flex;
       flex-direction: column;
+      direction: rtl;
       .Visibility-icon {
         color: themed("textColor");
       }
       .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
-        color: themed("textColor");
+        color: themed("blackGray");
+        &::placeholder {
+          color: themed("textColor");
+        }
       }
       .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
-        color: themed("textColor");
+        color: themed("blackGray");
+        &::placeholder {
+          color: themed("textColor");
+        }
       }
       .input fieldset {
         height: 55px;
         border: 1px solid themed("border");
         border-radius: 12px;
-        
       }
     }
 
