--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -16,6 +16,7 @@
   border-radius: 10px;
   overflow: hidden;
   margin: 10px 0;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
 
   .single-product {
     margin-bottom: 26px;
