--- a/src/style.scss
+++ b/src/style.scss
@@ -10,6 +10,7 @@ $themes: (
     blackGray: #000000,
     border: #2c7be5,
     iconBg: rgba(44, 123, 229, 0.3),
+    placeholder: #AFCCF3
   ),
   dark: (
     textColor: #d9d9d9,
@@ -22,6 +23,7 @@ $themes: (
     blackGray: #d9d9d9,
     border: #9da9bb,
     iconBg: #2c7be5,
+    placeholder: #5c646d
   ),
 );
 
