--- a/src/pages/auth/registerPage/registerPage.scss
+++ b/src/pages/auth/registerPage/registerPage.scss
@@ -65,7 +65,7 @@
         }
       }
     }
-
+    
     .input-container {
       display: flex;
       flex-direction: column;
@@ -85,6 +85,45 @@
         border: 1px solid themed("border");
         border-radius: 10px;
         color: themed("textColor") !important;
+      }
+      .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input.MuiSelect-select {
+        color: themed("placeholder");
+        font-family: "Cairo";
+      }
+      
+      .select-input {
+        margin: 10px 0px;
+        cursor: pointer;
+
+        select {
+          width: 351px;
+          max-width: 351px;
+          height: 40px;
+          padding: 0px 10px;
+          border-radius: 10px;
+          font-family: "Cairo";
+          font-size: 16px;
+          border: 1px solid themed("border");
+          background-color: themed("bg");
+          color: themed("textColor");
+          -webkit-appearance: none;
+          -moz-appearance: none;
+
+          &:invalid {
+            color: themed("placeholder");
+          }
+
+          &:focus {
+            box-shadow: none;
+            outline: none;
+          }
+
+          option {
+            color: themed("textColor");
+            background-color: themed("bgSoft");
+            border: 1px solid themed("border");
+          }
+        }
       }
     }
 
