--- a/src/features/products/productList/productList.scss
+++ b/src/features/products/productList/productList.scss
@@ -1,11 +1,11 @@
 @import "../../../style.scss";
 
 .section-products {
-  // @include themify($themes) {
-  //   .error-message {
-  //     color: themed("orangeBlueIcons");
-  //   }
-  // }
+  @include themify($themes) {
+    .error-message {
+      color: themed("orangeBlueIcons");
+    }
+  }
   a,
   a:hover {
     text-decoration: none;
