fix details swiper, add delete favorive,

--- a/src/features/products/productList/productList.scss
+++ b/src/features/products/productList/productList.scss
@@ -60,14 +60,14 @@
       width: 98px;
       height: 34px;
       border-radius: 10px;
-      background: var(--color-mainBlue);
+      background: #2c7be5;
       border: none;
       padding: 2px;
       span {
         font-family: "Cairo";
         font-style: normal;
         font-weight: 500;
-        color: var(--color-white);
+        color: #fff;
         font-size: 15px;
       }
     }
