--- a/src/features/swipers/categorySwiper/categorySwiper.scss
+++ b/src/features/swipers/categorySwiper/categorySwiper.scss
@@ -62,11 +62,11 @@
       .icon-category {
         color: themed("mainIconColor");
       }
-      .active-category {
-        color: themed("orangeBlueIcons");
-        p {
-          color: themed("orangeBlueIcons");
-        }
+    }
+    .active-category {
+      color: themed("orangeBlueIcons");
+      p {
+        color: themed("orangeBlueIcons") !important;
       }
     }
 
