--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -132,7 +132,7 @@
       .product-info {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
         justify-content: space-between;
 
         .product-title {
