--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -39,7 +39,7 @@
     .part-1 {
       position: relative;
       height: 280px;
-      max-height: 290px;
+      // max-height: 290px;
       margin-bottom: 10px;
       overflow: hidden;
       background: #ffffff;
@@ -129,9 +129,9 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         overflow: hidden;
-        border-radius: 10px;
+        // border-radius: 10px;
       }
     }
 
