--- a/src/features/swipers/detailsPageSwiper/detailsPageSwiper.scss
+++ b/src/features/swipers/detailsPageSwiper/detailsPageSwiper.scss
@@ -31,7 +31,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       overflow: hidden;
       border-radius: 10px;
     }
