--- a/src/features/notifications/notificatioComp/notification.scss
+++ b/src/features/notifications/notificatioComp/notification.scss
@@ -48,8 +48,11 @@
         }
       }
 
-      .dont-icon {
+      .dont-icon-unseen {
         color: #2c7be5;
+      }
+      .dont-icon-seen {
+        color: #c0d0e6;
       }
     }
   }
