--- a/src/pages/cartPage/cartPage.scss
+++ b/src/pages/cartPage/cartPage.scss
@@ -8,6 +8,23 @@
     align-items: center;
     // justify-content: center;
 
+    .popover {
+      margin-top: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      span {
+        color: themed("textColor");
+      }
+      .button-container {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+      }
+    }
+
     .container-title {
       display: flex;
       flex-direction: row-reverse;
