Updated text layout

--- a/src/pages/searchPage/searchPageNavBar.scss
+++ b/src/pages/searchPage/searchPageNavBar.scss
@@ -47,6 +47,7 @@
           font-size: 14px;
           line-height: 37px;
           color: #2c7be5;
+          direction: rtl;
         }
         .search-icon {
           width: 30px;
