--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -160,7 +160,8 @@
           font-weight: 600;
           font-size: 15px;
           line-height: 22px;
-          text-align: right;
+          // text-align: right;
+          direction: rtl;
         }
 
         .product-price {
