--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  @include themify($themes) {
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      -webkit-box-shadow: 0 0 0 30px themed("bg") inset !important;
+    }
+    input:-webkit-autofill {
+      -webkit-text-fill-color: themed("blackGray") !important;
+    }
+  }
 }
 
 body {
