--- a/src/pages/searchPage/searchPage.scss
+++ b/src/pages/searchPage/searchPage.scss
@@ -4,9 +4,11 @@
   @include themify($themes) {
     width: 100%;
     min-height: 80vh;
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: scroll;
 
     .container-title {
       display: flex;
