--- a/src/pages/searchPage/searchPageNavBar.scss
+++ b/src/pages/searchPage/searchPageNavBar.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-
+    position: sticky;
     .rapper {
       width: 95%;
       margin-top: 10px;
