--- a/src/pages/settingsPage/settingsPage.scss
+++ b/src/pages/settingsPage/settingsPage.scss
@@ -100,21 +100,26 @@
       }
     }
 
-    .btn {
-      // margin-top: 20px;
-      width: 132px;
-      height: 44px;
-      border-radius: 12px;
-      background: themed("orangeBlueIcons");
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    .btn-wrapper {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      .btn {
+        // margin-top: 20px;
+        width: 132px;
+        height: 44px;
+        border-radius: 12px;
+        background: themed("orangeBlueIcons");
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-      span {
-        font-family: "Cairo";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        text-align: center;
-        color: #ffffff;
+        span {
+          font-family: "Cairo";
+          font-style: normal;
+          font-weight: 500;
+          font-size: 16px;
+          text-align: center;
+          color: #ffffff;
+        }
       }
     }
   }
