--- a/src/index.scss
+++ b/src/index.scss
@@ -14,9 +14,9 @@
     input:-webkit-autofill {
       -webkit-text-fill-color: themed("blackGray") !important;
     }
-    .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input:-webkit-autofill{
-      border: unset;
-    }
+  }
+  .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input:-webkit-autofill {
+    border-radius: unset !important;
   }
 }
 
