--- a/src/features/swipers/detailsPageSwiper/detailsPageSwiper.scss
+++ b/src/features/swipers/detailsPageSwiper/detailsPageSwiper.scss
@@ -11,7 +11,7 @@
       height: 79px;
       img {
         border-radius: 3px;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 10px;
       }
     }
@@ -20,9 +20,10 @@
     }
   }
   .swiper-slide-thumb-active {
-    background-color: rgba(44, 123, 229, 0.5);
+    background-color: rgb(82, 137, 208);
     border-radius: 10px;
-    opacity: 0.3;
+    filter: url(#blue-wash);
+    // filter: sepia(100%) hue-rotate(190deg) saturate(500%);
   }
   .active {
     position: absolute;
