--- a/src/index.scss
+++ b/src/index.scss
@@ -59,3 +59,15 @@ body {
   background: #2c7be5;
   border-radius: 10px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  font-family: "Cairo";
+  font-style: normal;
+}
