--- a/src/pages/profilePage/profilePage.scss
+++ b/src/pages/profilePage/profilePage.scss
@@ -17,6 +17,9 @@
       margin: 0px auto;
       .profile-edit {
         //   padding: 5px 0px;
+        span {
+          margin-left: 10px;
+        }
         P {
           display: flex;
           align-items: center;
