--- a/src/pages/auth/loginPage/loginPage.scss
+++ b/src/pages/auth/loginPage/loginPage.scss
@@ -2,13 +2,13 @@
 
 .loginPage {
   @include themify($themes) {
-    height: 100vh;
+    // height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     background: themed("bg");
-    //   gap: 20px;
+    gap: 50px;
 
     .logo-container {
       padding-top: 50px;
@@ -34,8 +34,18 @@
       display: flex;
       flex-direction: column;
       direction: rtl;
+      @include tablet {
+        width: 85%;
+        margin: 0 auto;
+      }
       .Visibility-icon {
         color: themed("textColor");
+      }
+      .MuiFormControl-root {
+        width: 333px;
+        @include tablet {
+          width: 100%;
+        }
       }
       .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
         color: themed("blackGray");
@@ -58,11 +68,13 @@
 
     .btn {
       // margin-top: 20px;
-      width: 130px;
+      min-width: 130px;
+      max-width: fit-content;
       height: 46px;
       border-radius: 12px;
       background: themed("orangeBlueIcons");
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      overflow: hidden;
 
       span {
         font-family: "Cairo";
