--- a/src/features/products/mostSaledProduct/mostSaledProduct.scss
+++ b/src/features/products/mostSaledProduct/mostSaledProduct.scss
@@ -1,3 +1,5 @@
+@import "../../../style.scss";
+
 .mostsaledproduct-container {
   width: 250px;
   height: 266px;
@@ -12,7 +14,7 @@
 
   .product-footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
     position: absolute;
@@ -30,8 +32,8 @@
       align-items: center;
       justify-content: center;
       background: #ffffff;
-      width: 27px;
-      height: 27px;
+      width: 42px;
+      height: 42px;
       border-radius: 5px;
       margin-left: 6px;
       .icon {
@@ -44,7 +46,6 @@
     .product-info {
       display: flex;
       flex-direction: column;
-      bottom: 0;
       padding-right: 5px;
       font-family: "Cairo";
       font-style: normal;
@@ -52,6 +53,23 @@
       font-size: 20px;
       line-height: 19px;
       padding-top: 5px;
+      @include tablet {
+        padding-top: 2px;
+        width: 90%;
+        overflow: hidden;
+      }
+      .product-name {
+        display: flex;
+        flex-direction: row;
+        font-size: 18px;
+        line-height: 19px;
+        @include tablet {
+          font-size: 16px;
+        }
+        @include mobile {
+          font-size: 12px;
+        }
+      }
       span {
         padding-top: 8px;
         font-weight: 500;
