--- a/src/features/swipers/mainSwiper/mainSwiper.scss
+++ b/src/features/swipers/mainSwiper/mainSwiper.scss
@@ -35,7 +35,7 @@
       display: block;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 }
