--- a/src/features/swipers/mostSaledSwiper/mostSaledSwiper.scss
+++ b/src/features/swipers/mostSaledSwiper/mostSaledSwiper.scss
@@ -25,36 +25,36 @@
       }
     }
   }
-    .mySwiper {
-      width: 95% !important;
-    }
-    .swiper {
+  .mySwiper {
+    width: 95% !important;
+    direction: rtl;
+  }
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: transparent;
+    border-radius: 10px;
+    width: 18% !important;
+    padding: 0 !important;
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    img {
+      display: block;
       width: 100%;
       height: 100%;
-    }
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: transparent;
-      border-radius: 10px;
-      width: 18% !important;
-      padding: 0 !important;
-      /* Center slide text vertically */
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      object-fit: cover;
       overflow: hidden;
-
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        overflow: hidden;
-      }
     }
   }
-
+}
 
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
 @media screen and (max-width: 1024px) {
