--- a/src/pages/auth/loginPage/loginPage.scss
+++ b/src/pages/auth/loginPage/loginPage.scss
@@ -38,6 +38,10 @@
         width: 85%;
         margin: 0 auto;
       }
+      .input {
+        font-family: "Cairo";
+        font-style: normal;
+      }
       .Visibility-icon {
         color: themed("textColor");
       }
