--- a/src/index.scss
+++ b/src/index.scss
@@ -72,3 +72,10 @@ span {
   font-family: "Cairo" !important;
   font-style: normal !important;
 }
+button:hover {
+  cursor: pointer;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
