--- a/src/pages/profilePage/profilePage.scss
+++ b/src/pages/profilePage/profilePage.scss
@@ -28,6 +28,7 @@
           font-weight: 500;
           font-size: 16px;
           line-height: 30px;
+          padding: 5px 0px;
           color: themed("textColor");
           .icon {
             color: themed("orangeGrayIcons");
