fix price layout

--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -175,9 +175,10 @@
           font-family: "Cairo";
           font-style: normal;
           font-weight: 500;
-          font-size: 20px;
+          font-size: 16px;
           line-height: 37px;
           text-align: right;
+          direction: rtl;
           // color: var(--color-mainBlue);
         }
       }
