--- a/src/pages/detailsPage/detailsPage.scss
+++ b/src/pages/detailsPage/detailsPage.scss
@@ -37,6 +37,7 @@
       width: 95%;
 
       .price {
+        direction: rtl;
         color: themed("textColor");
         font-family: "Cairo";
         font-style: normal;
