--- a/src/features/cart/cartComp/cartListItem.scss
+++ b/src/features/cart/cartComp/cartListItem.scss
@@ -37,10 +37,11 @@
           font-size: 16px;
           line-height: 30px;
         }
-        span {
+        p {
           font-weight: 500;
-          font-size: 22px;
+          font-size: 20px;
           line-height: 41px;
+          direction: rtl;
         }
       }
 
