--- a/src/features/products/modalProduct/modalProduct.scss
+++ b/src/features/products/modalProduct/modalProduct.scss
@@ -69,10 +69,11 @@
                 cursor: pointer;
               }
             }
-            span {
+            p {
               font-weight: 500;
-              font-size: 22px;
+              font-size: 20px;
               line-height: 41px;
+              direction: rtl;
             }
           }
 
