--- a/src/features/cart/cartComp/cartListItem.scss
+++ b/src/features/cart/cartComp/cartListItem.scss
@@ -25,14 +25,16 @@
       padding-top: 10px;
       padding-right: 22px;
       margin-bottom: 10px;
-      gap: 15px;
+      gap: 10px;
+      width: 100%;
 
       .product-title {
         color: themed("textColor");
         text-align: right;
         font-family: "Cairo";
         font-style: normal;
-        h4 {
+        width: 60%;
+        .title {
           font-weight: 500;
           font-size: 16px;
           line-height: 30px;
@@ -46,13 +48,13 @@
       }
 
       .img-container {
-        width: 79px;
+        width: 25%;
         height: 66px;
         //   border-radius: 10px;
         img {
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          object-fit: fill;
           overflow: hidden;
           border-radius: 10px;
         }
@@ -78,7 +80,6 @@
           color: #b8b8b8;
           font-size: 28px;
         }
-
 
         span {
           font-family: "Cairo";
