--- a/src/features/products/modalProduct/modalProduct.scss
+++ b/src/features/products/modalProduct/modalProduct.scss
@@ -84,7 +84,7 @@
             img {
               width: 100%;
               height: 100%;
-              object-fit: cover;
+              object-fit: fill;
               overflow: hidden;
               border-radius: 10px;
             }
