--- a/src/pages/profilePage/profilePage.scss
+++ b/src/pages/profilePage/profilePage.scss
@@ -3,14 +3,30 @@
 .profilePage-container {
   @include themify($themes) {
     width: 100%;
-    height: 80%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 80% 20%;
-    grid-column-gap: 0px;
-    grid-row-gap: 20px;
+    height: 85%;
+    // height: 100%;
+    // display: grid;
+    // grid-template-columns: 100%;
+    // grid-template-rows: 70% 20%;
+    // grid-column-gap: 0px;
+    // grid-row-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    position: relative;
+    @include md_mobile {
+      height: 110%;
+      gap: 20px;
+    }
+
+    @include xs_mobile {
+      height: 130%;
+    }
 
     .profile-header {
+      height: 80%;
       font-family: "Cairo";
       font-style: normal;
       width: 95%;
@@ -149,6 +165,9 @@
     }
 
     .profile-footer {
+      position: absolute;
+      bottom: 0;
+      height: 20%;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -158,6 +177,7 @@
       font-family: "Cairo";
       font-style: normal;
       color: themed("textColor");
+      margin-top: 20px;
       @include sm_mobile {
         margin-bottom: 10px;
       }
