--- a/src/features/products/productListItem/productListItem.scss
+++ b/src/features/products/productListItem/productListItem.scss
@@ -15,17 +15,28 @@
       color: themed("orangeBlueIcons");
     }
   }
+  width: 300px;
   height: 350px;
   border-radius: 10px;
   overflow: hidden;
   margin: 10px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
 
-  .single-product {
-    margin-bottom: 26px;
-    width: 300px;
-    border-radius: 10px;
+  @include tablet {
+    height: 350px;
+    width: 250px;
+  }
 
+  @include mobile {
+    height: 270px;
+    width: 170px;
+  }
+
+  .single-product {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 26px;
+    border-radius: 10px;
     &:hover {
       .part-1::before {
         transform: scale(1.2, 1.2) rotate(5deg);
@@ -38,7 +49,7 @@
 
     .part-1 {
       position: relative;
-      height: 280px;
+      height: 70%;
       // max-height: 290px;
       margin-bottom: 10px;
       overflow: hidden;
@@ -140,10 +151,13 @@
 
     .part-2 {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      // justify-content: space-between;
       padding: 0px 11px;
+      @include mobile {
+        padding: 0px 8px;
+      }
 
       .icon {
         // color: var(--color-orange);
@@ -153,13 +167,16 @@
       .product-info {
         display: flex;
         flex-direction: column;
-        // align-items: center;
-        justify-content: space-between;
+        align-items: flex-end;
+        justify-content: center;
+        width: 100%;
+        gap: 3px;
 
         .product-title {
-          // color: var(--color-mainBlue);
-          font-family: "Cairo";
-          font-style: normal;
+          width: 100%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
           font-weight: 600;
           font-size: 15px;
           line-height: 22px;
@@ -169,17 +186,23 @@
             cursor: pointer;
           }
         }
-
-        .product-price {
-          /* display: inline-block; */
-          font-family: "Cairo";
-          font-style: normal;
-          font-weight: 500;
-          font-size: 16px;
-          line-height: 37px;
-          text-align: right;
-          direction: rtl;
-          // color: var(--color-mainBlue);
+        .product-footer {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          .product-price {
+            /* display: inline-block; */
+            font-family: "Cairo";
+            font-style: normal;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 37px;
+            text-align: right;
+            direction: rtl;
+            // color: var(--color-mainBlue);
+          }
         }
       }
     }
@@ -187,27 +210,27 @@
 }
 
 /* ____ MEDIA QUERIES (MEDIUM DEVICES) ________ */
-@media screen and (max-width: 1024px) {
-  .card {
-    height: 350px;
-  }
-  .card .single-product {
-    width: 250px;
-    margin-bottom: 200px;
-  }
-}
+// @media screen and (max-width: 1024px) {
+//   .card {
+//     height: 350px;
+//     width: 250px;
+//   }
+//   .card .single-product {
+//     margin-bottom: 200px;
+//   }
+// }
 
 /* ____ MEDIA QUERIES (SMALL DEVICES) ________ */
-@media screen and (max-width: 600px) {
-  .card {
-    height: 270px;
-  }
-  .card .single-product {
-    width: 170px;
-    margin-bottom: 200px;
-  }
-  .card .single-product .part-1 {
-    height: 200px;
-    max-height: 230px;
-  }
-}
+// @media screen and (max-width: 600px) {
+//   .card {
+//     height: 270px;
+//     width: 170px;
+//   }
+//   .card .single-product {
+//     margin-bottom: 200px;
+//   }
+//   .card .single-product .part-1 {
+//     height: 200px;
+//     max-height: 230px;
+//   }
+// }
