--- a/src/pages/mainPage/MainNavBar.scss
+++ b/src/pages/mainPage/MainNavBar.scss
@@ -33,6 +33,10 @@
         padding-bottom: 10px;
         fill: themed("mainIconColor");
       }
+
+      .logo_primary {
+        width: 175px;
+      }
     }
   }
 }
