--- a/src/pages/mainPage/mainPageTable.scss
+++ b/src/pages/mainPage/mainPageTable.scss
@@ -31,6 +31,22 @@
           }
         }
       }
+      // .css-18fu35v-MuiTableRow-root {
+      //   td {
+      //     border-left: 1px solid #2c7be5;
+      //     &:last-child {
+      //       border-left: 0;
+      //     }
+      //   }
+      // }
+      .MuiTableBody-root {
+        td {
+          border-left: 1px solid #2c7be5 !important;
+          &:last-child {
+            border-left: 0 !important;
+          }
+        }
+      }
 
       .MuiTableBody-root {
         .css-120ze2a-MuiTableCell-root,
@@ -43,10 +59,10 @@
           font-size: 14px;
           line-height: 19px;
           text-align: center;
-          border-left: 1px solid #2c7be5;
+          // border-left: 1px solid #2c7be5;
           padding: 6px 10px;
           &:last-child {
-            border-left: 0;
+            border-left: 0 !important;
           }
         }
       }
